pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-address-only-to.ub
factory: {
  state-moves: [
    { from: 'core.thing@resource.old', to: 'resource.new' }
  ]
}
